  * Corrected emacs startup file, closes: #446177.

  [ Stefano Zacchiroli ]
  * add patch camlrun_shared, which ships an alternative version of the
    camlrun library (called "camlrun_shared") made of PIC objects

  [ Sylvain Le Gall ]
  * ... fixes in cdbs class for ocamldoc generation ... (TODO: still to be
    checked) [ entry added by Zack ]

 -- Samuel Mimram <smimram@debian.org>  Wed, 10 Oct 2007 22:43:34 +0000

ocaml (3.10.0-8) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * CDBS class
    - invoke ocamldoc after dh_install has been run (otherwise ocamldoc is
      likely to generate empty API references ...)
    - add support for automatic generation of doc-base entries for ocamldoc
      generated API reference
    - better test for package membership to OCAML_OCAMLDOC_PACKAGES
  * debian/ocaml-base-nox.README.Debian
    - add an entry describing the requirement for compiling ocamldoc-generated
      LaTeX documentation (closes: #420782)

 -- Stefano Zacchiroli <zack@debian.org>  Sun, 02 Sep 2007 19:11:14 +0200

ocaml (3.10.0-7) unstable; urgency=low

  [ Sylvain Le Gall ]
  * add patch not-native-no-aspp to workaround FTBFS, as described upstream in
    bug 4375 (closes: #429185)
  * don't ignore make clean error
  * move menu section of ocaml interpreter to Applications/Programming
    to comply with new menu structure


  [ Stefano Zacchiroli ]
  * CDBS class
    - add support for specifying the target dir for generated documentation
    - various fixes in ocamldoc invocation

 -- Sylvain Le Gall <gildor@debian.org>  Sat, 01 Sep 2007 22:33:52 +0200

ocaml (3.10.0-6) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * debian/ocaml-nox.dirs.in
    - avoid creating empty /usr/include/ocaml/* directory (closes: #439017)
  * CDBS class
    - add support for automatic ocamldoc HTML documentation generation
  * Policy
    - add an appendix about the CDBS class with some minimal information and
      pointers to the commented .mk files
