@@ -1,0 +1,8 @@
+Document: @PACKAGE@-ocamldoc-api-reference
+Title: @PACKAGE@ OCamldoc API Reference
+Abstract: API reference manual for @PACKAGE@ (generated via OCamldoc)
+Section: Applications/Programming
+
+Format: HTML
+Index: /usr/share/doc/@PACKAGE@/html/api/index.html
+Files: /usr/share/doc/@PACKAGE@/html/api/*
