@@ -1,1 +1,1 @@
-alpha amd64 arm hurd-i386 i386 ia64 kfreebsd-i386 powerpc sparc
+alpha amd64 hurd-i386 i386 kfreebsd-i386 powerpc sparc
